# probaboracle

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlintignore  .pre-commit-config.yaml  AGENTS.md  EVAL_RULESET.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependency-review.yml  stale-dependency-prs.yml
docs/diagrams/: EVAL_CHART.md  PIPELINE.md
docs/governance/: CHARTER.md  DECISIONS.md  SESSION_HANDOFF.md
docs/peanut/: codexbeab-notes.md
docs/research/: 010_B-PRODUCT_FIT.md  020_B-COHERENCE_FIRST.md  030_B-PROMPT_RELEVANCE.md  060_B-FAIL_PRESSURE_PULSE.md  070_CB-CLEAN_BASELINE_RESET.md  410_PB-FAIL_PRESSURE_PULSE.md  BETA_1_PRODUCT_FIT.md  BETA_2_COHERENCE_FIRST.md  BETA_3_PROMPT_RELEVANCE.md  BETA_4_COHERENT_ABSURDITY.md  BETA_5_RETAIN_OR_EVICT.md  BETA_6_FAIL_PRESSURE_PULSE.md  CLEAN_BASELINE_RESET.md  METHOD_NOTE_DIAGNOSTIC_FAIL_SURFACE.md  PRE_BETA_6_FAIL_PRESSURE_PULSE.md  README.md
docs/runtime/: ARCHITECTURE.md  RUNBOOK.md  START_END_REFERENCE.md
docs/runtime/templates/: README.md  backlog.md  boundary.md  case.md  hypothesis.md  lane.md  legend.md  validation.md
scripts/: check_end_docs.py  check_end_git_clean.sh  check_end_pending.py  check_eod_docs.py  check_eod_git_clean.sh  check_shell_scripts.py  cloud-maintenance.sh  cloud-setup.sh  end_of_day_routine.sh  path_leak_check.py  render_eval_chart.mjs  render_eval_chart.py
src/: eval-db.ts  index.ts  workflow.ts
src/config/: core.ts  eval.ts  index.ts  workflow.ts
src/probaboracle/: __init__.py  __main__.py  agent.py  config.py  doctor_env.py  eval_chart.py  eval_db.py  main.py
src/probaboracle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_check_end_pending.py  test_config.py  test_eval_chart.py  test_eval_db.py  test_main.py  test_path_leak_check.py  test_tooling_contract.py
tools/: end_of_day_routine.sh  start_of_day_routine.sh
