[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "probaboracle"
version = "0.1.0"
description = "Unhelpful local CLI mini oracle within Polinko with a constrained reasoning surface."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai-agents==0.14.7",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "build==1.3.0",
  "isort==8.0.1",
  "mypy==1.15.0",
]

[project.scripts]
probaboracle = "probaboracle.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
known_first_party = ["probaboracle"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["probaboracle"]
