[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "probaboracle"
version = "0.1.0"
description = "Unhelpful local CLI mini oracle within Polinko with a constrained reasoning surface."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openai==2.35.0",
  "openai-agents==0.14.7",
  "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "isort==6.1.0",
  "mypy==2.1.0",
  "pre-commit==4.5.1",
  "ruff==0.15.12",
]

[project.scripts]
probaboracle = "probaboracle.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]
known_first_party = ["probaboracle"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["probaboracle"]
