[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "probaboracle"
version = "0.1.0"
description = "Unhelpful local CLI mini oracle within Polinko with a constrained reasoning surface."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
  "idna==3.16",
  "openai==2.38.0",
  "openai-agents==0.17.3",
  "python-dotenv==1.2.2",
  "starlette==1.1.0",
  "urllib3==2.7.0",
]

[project.optional-dependencies]
dev = [
  "build==1.5.0",
  "mypy==2.1.0",
  "pip-audit==2.10.0",
  "pre-commit==4.6.0",
  "ruff==0.15.14",
]

[project.scripts]
probaboracle = "probaboracle.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
packages = ["probaboracle"]
